# aws-glue-local-env

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  run.py
